src/objects/ADvendio__FlexiblePaymentPlan__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <description>Reference to Campaign Item</description>
        <inlineHelpText>Reference to Campaign Item</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Flexible Payment Plans</relationshipLabel>
        <relationshipName>FlexiblePaymentPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>Additional information</description>
        <inlineHelpText>Additional information</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__PercentageAmount__c</fullName>
        <description>Optional, when creating invoices, Amount is set to a percentage amount of the Campaign Item.</description>
        <label>PercentageAmount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication Date</label>
        <referenceTo>ADvendio__PublicationDate__c</referenceTo>
        <relationshipLabel>Flexible Payment Plans</relationshipLabel>
        <relationshipName>FlexiblePaymentPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this flexible payment play.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this flexible payment play.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Flexible Payment Plan</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flexible Payment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>